--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <h1>VerNex</h1>
         <div class="subtitle">Coming Soon</div>
         <div class="message">
-            Something amazing is on the horizon. We're crafting an exceptional experience just for you.
+            Markets Reimagined.
         </div>
     </div>
 </body>
